First rework iteration

--- a/kundryukov_diploma.ipynb
+++ b/kundryukov_diploma.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "Ttest_indResult(statistic=-0.7288680398062308, pvalue=0.4661023478267259)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,24 +648,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=0.7440552331321103, pvalue=0.45698563867450803)"
+       "Ttest_1sampResult(statistic=0.8103459513322989, pvalue=0.41789863518186854)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
     "    df[df['sales'] == 'IT']['satisfaction_level'],\n",
-    "    df['satisfaction_level'].mean()\n",
+    "    df[df['sales'] != 'IT']['satisfaction_level'].mean()\n",
     ")"
    ]
   },
@@ -692,115 +693,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sales</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>RandD</td>\n",
-       "      <td>666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>accounting</td>\n",
-       "      <td>563</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>hr</td>\n",
-       "      <td>524</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>management</td>\n",
-       "      <td>539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>marketing</td>\n",
-       "      <td>655</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>product_mng</td>\n",
-       "      <td>704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>sales</td>\n",
-       "      <td>3126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>support</td>\n",
-       "      <td>1674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>technical</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         sales  count\n",
-       "0           IT    954\n",
-       "1        RandD    666\n",
-       "2   accounting    563\n",
-       "3           hr    524\n",
-       "4   management    539\n",
-       "5    marketing    655\n",
-       "6  product_mng    704\n",
-       "7        sales   3126\n",
-       "8      support   1674\n",
-       "9    technical   2023"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_by_sales_df = df[df['left'] == 0].groupby('sales').agg(count=('sales', 'count')).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1136,79 +1038,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для проверки этой гипотезы я разделю генеральную совокупность на две выборки по среднему значению `number_project` и признаку `left`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=48.68370881115877, pvalue=0.0)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number_project_mean = df['number_project'].mean()\n",
+    "\\# UPD\n",
     "\n",
-    "# кол-во проектов выше среднего\n",
-    "stats.ttest_ind(\n",
-    "    df[(df['number_project'] > number_project_mean) & (df['left'] == 1)]['number_project'],\n",
-    "    df[(df['number_project'] > number_project_mean) & (df['left'] == 0)]['number_project'],\n",
-    ")"
+    "Для проверки этой гипотезы я разделю генеральную совокупность на две выборки по признаку `left == 1` и `left == 0`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UPD\n",
+    "resigned_df = df[df['left'] == 1]\n",
+    "remained_df = df[df['left'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=-80.46257650995486, pvalue=0.0)"
+       "Ttest_1sampResult(statistic=2.2625169994483643, pvalue=0.023725330210266616)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# кол-во проектов ниже среднего\n",
-    "stats.ttest_ind(\n",
-    "    df[(df['number_project'] < number_project_mean) & (df['left'] == 1)]['number_project'],\n",
-    "    df[(df['number_project'] < number_project_mean) & (df['left'] == 0)]['number_project'],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_1sampResult(statistic=1.7238512080602715, pvalue=0.08482128282514263)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
-    "    df[df['left'] == 1]['number_project'],\n",
-    "    df['number_project'].mean()\n",
+    "    resigned_df['number_project'],\n",
+    "    remained_df['number_project'].mean()\n",
     ")"
    ]
   },
@@ -1216,11 +1082,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как видно из первых двух тестов, где значение pvalue близко к 0, то мы отвергаем нулевую гипотезу для выборкок уволившихся/оставшихся людей с средним значением выше или ниже среднего - кардинально отличаются друг от друга.\n",
+    "\\# UPD\n",
     "\n",
-    "Впрочем, я провёл ещё один тест по кол-ву проектов для уволившихся сотрудников на фоне всех в комании и получил результат ~8.5%, что выше значимого критерия. Следовательно, нулевую гипотезу мы принимаем.\n",
+    "Как видно из теста, pvalue меньше критически значимого значения, это значит что мы можем отвергать нулевую гипотезу.\n",
     "\n",
-    "Вывод: в общем количество проектов на сотруднике не так сильно влияет на его решение уволиться. Но результат исследования меняется, если на сотруднике слишком много или слишком мало проектов."
+    "Вывод: среднее кол-во проектов на каждом сотруднике могло повлиять на принятие решения об увольнении"
    ]
   },
   {
@@ -1232,24 +1098,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=-13.097904548560857, pvalue=2.5532378106507945e-38)"
+       "Ttest_1sampResult(statistic=-17.190713188997574, pvalue=1.0688704028386881e-63)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
-    "    df[df['left'] == 1]['promotion_last_5years'],\n",
-    "    df['promotion_last_5years'].mean()\n",
+    "    resigned_df['promotion_last_5years'],\n",
+    "    remained_df['promotion_last_5years'].mean()\n",
     ")"
    ]
   },
@@ -1262,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1279,8 +1146,9 @@
     }
    ],
    "source": [
-    "g1_resigned_count = len(df[(df['promotion_last_5years'] == 1) & (df['left'] == 1)]['promotion_last_5years'])\n",
-    "g1_remained_count = len(df[(df['promotion_last_5years'] == 1) & (df['left'] == 0)]['promotion_last_5years'])\n",
+    "# UPD\n",
+    "g1_resigned_count = len(resigned_df[(resigned_df['promotion_last_5years'] == 1)])\n",
+    "g1_remained_count = len(remained_df[(remained_df['promotion_last_5years'] == 1)])\n",
     "\n",
     "plt.bar(\n",
     "    ['Уволилось', 'Осталось'],\n",
@@ -1291,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1308,8 +1176,9 @@
     }
    ],
    "source": [
-    "g2_resigned_count = len(df[(df['promotion_last_5years'] == 0) & (df['left'] == 1)]['promotion_last_5years'])\n",
-    "g2_remained_count = len(df[(df['promotion_last_5years'] == 0) & (df['left'] == 0)]['promotion_last_5years'])\n",
+    "# UPD\n",
+    "g2_resigned_count = len(resigned_df[(resigned_df['promotion_last_5years'] == 0)])\n",
+    "g2_remained_count = len(remained_df[(remained_df['promotion_last_5years'] == 0)])\n",
     "\n",
     "plt.bar(\n",
     "    ['Уволилось', 'Осталось'],\n",
@@ -1334,24 +1203,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=-27.375035987124736, pvalue=6.146641075602401e-150)"
+       "Ttest_1sampResult(statistic=-35.92913587424606, pvalue=1.3683094373233962e-241)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
-    "    df[df['left'] == 1]['Work_accident'],\n",
-    "    df['Work_accident'].mean()\n",
+    "    resigned_df['Work_accident'],\n",
+    "    remained_df['Work_accident'].mean()\n",
     ")"
    ]
   },
@@ -1371,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1402,47 +1272,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=-39.10948894348423, pvalue=9.0127811954355e-279)"
+       "Ttest_1sampResult(statistic=-51.33034867547431, pvalue=0.0)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
-    "    df[df['left'] == 1]['satisfaction_level'],\n",
-    "    df['satisfaction_level'].mean()\n",
+    "    resigned_df['satisfaction_level'],\n",
+    "    remained_df['satisfaction_level'].mean()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=23.120349280818616, pvalue=2.518024251375598e-110)"
+       "Ttest_1sampResult(statistic=30.344952648144773, pvalue=3.8135536324917118e-180)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
-    "    df[df['left'] == 1]['time_spend_company'],\n",
-    "    df['time_spend_company'].mean()\n",
+    "    resigned_df['time_spend_company'],\n",
+    "    remained_df['time_spend_company'].mean()\n",
     ")"
    ]
   },
@@ -1462,24 +1334,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=0.607887029160167, pvalue=0.5433010700634139)"
+       "Ttest_1sampResult(statistic=0.7978384275790602, pvalue=0.4250173228465538)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# UPD\n",
     "stats.ttest_1samp(\n",
-    "    df[df['left'] == 1]['last_evaluation'],\n",
-    "    df['last_evaluation'].mean()\n",
+    "    resigned_df['last_evaluation'],\n",
+    "    remained_df['last_evaluation'].mean()\n",
     ")"
    ]
   },
@@ -1487,7 +1360,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В этом заключительном тесте я вижу, что значение pvalue превышает критически значимую оценку и составляет аж 54%. Это значит, что нулевая гипотеза принята и поле **\"last_evaluation\"** не влияет на принятие решения об увольнении"
+    "\\# UPD\n",
+    "В этом заключительном тесте я вижу, что значение pvalue превышает критически значимую оценку и составляет аж 42%. Это значит, что нулевая гипотеза принята и поле **\"last_evaluation\"** не влияет на принятие решения об увольнении"
    ]
   },
   {
